recursion.logo.lessons.recursion.logo.spiral.SpiralUse.scala.error
SpiralUse:3: error: type mismatch;
 found   : Double(0.5)
 required: Int
    spiral(100,124,0.5,2);
                   ^