recursion.logo.lessons.recursion.logo.spiral.SpiralUse.scala.code
override def run() {
    spiral(100,124,0.5,2);
}